--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,9 +2,9 @@ spring.application.name=apartamentos
 # Database Configuration
 # si usas railway debes actualizar la url, usuario y contraseña según los datos 
 # que te proporciona railway
-spring.datasource.url=jdbc:mysql://root:uTqDyUovgTXqOciMGVeQjsIAFawmSIko@trolley.proxy.rlwy.net:35049/railway
+spring.datasource.url=jdbc:mysql://root:AZSspWMvBQiaaHhPQtdZSgwwebLEsWny@mainline.proxy.rlwy.net:35417/railway
 spring.datasource.username=root
-spring.datasource.password=uTqDyUovgTXqOciMGVeQjsIAFawmSIko
+spring.datasource.password=AZSspWMvBQiaaHhPQtdZSgwwebLEsWny
 
 # JPA Configuration
 spring.jpa.hibernate.ddl-auto=update
